@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-06"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080606
-#define RUBY_PATCHLEVEL 9
+#define RUBY_PATCHLEVEL 10
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
