@@ -1,3 +1,13 @@
+Fri Jun  6 21:16:55 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/Makefile.sub (COMMON_HEADERS): include ws2tcpip.h.
+
+	* ext/socket/addrinfo.h (addrinfo, getaddrinfo, getnameinfo,
+	  freehostent, freeaddrinfo): undef before define because these are
+	  macros in some versions of Windows SDK.
+
+	* win32/setup.mak: maybe commit miss.
+
 Fri Jun  6 19:34:22 2008  Akinori MUSHA  <knu@iDaemons.org>
 
 	* mkconfig.rb: hide build path from rbconfig.rb.
